# ai_tea-_party

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  FRONTEND_FEATURES.md  FRONTEND_MIGRATION.md  README.md  README_cn.md  README_en.md  REFACTORED_GUIDE.md  VERSION.md  config.json  final_ai_test.py  final_test.py  full_system_test.py  main.py  main_v2.py  preset_characters.py  pyproject.toml  requirements.txt  test_ai_chat.py  test_api_improvements.py  test_deepseek_env.py  test_phase1.py  test_refactored_system.py
.github/workflows/: ci.yml
archive/: main_v1.py
archive/docs/: CHATROOM_FEATURES.md  REFACTORED_GUIDE.md  SHADCN_MIGRATION_SUMMARY.md
archive/mockups/: style_1_minimal.html  style_3_playful.html  style_4_enterprise.html  (+5 more)
db/: database.py  repository.py
docs/: E2E_TEST_SKILL.md  IMPLEMENTATION_COMPLETE.md  PROMPT_DESIGN.md
frontend/: QUICK_START_CN.md  README.md  package-lock.json  package.json  playwright.config.ts
mockups/: style_2_dark_scifi.html  style_5_glassmorphism.html  v2_style_2_spatial_glass.html  v2_style_3_neo_brutalism.html  v2_style_5_holographic.html  v3_style_3_poetic_fluid.html  v3_style_4_bookish_sepia.html
models/: character.py  persona.py  world_info.py
routes/: rest.py  sse.py  ws.py
scripts/: debug_message.py
services/: ai_service.py  chat_service.py  orchestrator.py  variables.py
static/: app.js  style.css  webgl-liquid-glass.js
templates/: index.html
tests/: conftest.py  test_api.py  test_chat_service.py  test_db.py  test_models.py  test_variables.py
utils/: __init__.py  config_loader.py  env_watcher.py
(+32 files in other folders)
