[project]
name = "ai-tea-party"
version = "2.0.0"
description = "AI Tea Party backend service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "httpx>=0.27.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.5",
    "requests>=2.31.0",
    "litellm>=1.81.0",
]

[tool.uv]
package = false
